// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphNodeReroute.vue snapshot initial 1`] = `
<g
  transform="translate(0, 0)"
>
  <title>
    reroute
  </title>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,-2 Q9,-2 9,10 T0,22 z"
      fill="#ddd"
      stroke="#555"
      stroke-width="2"
    />
  </g>
  <g
    transform="translate(10, 2)"
  >
    <g
      class="edge-anchor"
      data-edge_key="value"
      data-node_id=""
      data-type="node-edge-output"
    >
      <circle
        fill="transparent"
        r="8"
        stroke="none"
      />
    </g>
    <g
      class="view-only"
      fill="#daa520"
      stroke="#333"
    >
      <path
        d="M-6,-8 l6,0 l6,4 l-6,4 l6,4 l-6,4 l-6,0z"
        stroke-linejoin="round"
      />
    </g>
  </g>
  <g
    transform="translate(1, 2)"
  >
    <g
      class="edge-anchor"
      data-edge_key="value"
      data-node_id=""
      data-type="node-edge-input"
    >
      <circle
        fill="transparent"
        r="8"
        stroke="none"
      />
    </g>
    <g
      class="view-only"
      fill="#daa520"
      stroke="#333"
    >
      <path
        d="M-8,-8 l6,4 l-6,4 l6,4 l-6,4 l12,0 l0,-16z"
        stroke-linejoin="round"
      />
    </g>
  </g>
</g>
`;

exports[`src/components/elements/GraphNodeReroute.vue snapshot selected 1`] = `
<g
  transform="translate(0, 0)"
>
  <title>
    reroute
  </title>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,-2 Q9,-2 9,10 T0,22 z"
      fill="#ddd"
      stroke="orange"
      stroke-width="3"
    />
  </g>
  <g
    transform="translate(10, 2)"
  >
    <g
      class="edge-anchor"
      data-edge_key="value"
      data-node_id=""
      data-type="node-edge-output"
    >
      <circle
        fill="transparent"
        r="8"
        stroke="none"
      />
    </g>
    <g
      class="view-only"
      fill="#daa520"
      stroke="#333"
    >
      <path
        d="M-6,-8 l6,0 l6,4 l-6,4 l6,4 l-6,4 l-6,0z"
        stroke-linejoin="round"
      />
    </g>
  </g>
  <g
    transform="translate(1, 2)"
  >
    <g
      class="edge-anchor"
      data-edge_key="value"
      data-node_id=""
      data-type="node-edge-input"
    >
      <circle
        fill="transparent"
        r="8"
        stroke="none"
      />
    </g>
    <g
      class="view-only"
      fill="#daa520"
      stroke="#333"
    >
      <path
        d="M-8,-8 l6,4 l-6,4 l6,4 l-6,4 l12,0 l0,-16z"
        stroke-linejoin="round"
      />
    </g>
  </g>
</g>
`;
